feat: implement local save and GitHub push support

--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
     "default_title": "New Dynamic Journal"
   },
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "permissions": [
     "storage",
@@ -19,7 +19,7 @@
     "https://api.github.com/*"
   ],
   "background": {
-    "service_worker": "sw.js"
+    "service_worker": "js/sw.js"
   },
   "options_page": "options.html"
 }
