--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "0.6.2",
   "description": "Lightweight editor for Deepwhite 11ty dynamic journals. UI matches site style. Publish is mocked.",
   "action": {
-    "default_title": "New Dynamic Journal"
+    "default_title": "New Dynamic Journal",
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icons/icon16.png",
