--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Deepwhite Dynamic Publisher",
-  "version": "1.0.0",
+  "version": "1.2.1.0",
   "description": "Lightweight editor for Deepwhite 11ty dynamic journals. UI matches site style.",
   "action": {
-    "default_title": "New Dynamic Journal",
-    "default_popup": "popup.html"
+    "default_title": "打开 Deepwhite 编辑器"
   },
   "icons": {
     "16": "icons/icon16.png",
